k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: blood-donation-app
  labels:
    app: blood-donation-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: blood-donation-app
